--- a/src/components/Forside.module.sass
+++ b/src/components/Forside.module.sass
@@ -4,7 +4,7 @@
   display: flex
   align-items: center
   justify-content: center
-  height: 100%
+  // height: 100%
   img
-    max-height: 100%
     max-width: 100%
+    max-height: 100%
