--- a/src/components/Nav.module.sass
+++ b/src/components/Nav.module.sass
@@ -1,9 +1,11 @@
+$btnBottom: 2em
+  
 .nav
   display: block
   position: absolute
   bottom: 0
   z-index: 1
-  width: clamp(100px, 50%, 300px)
+  width: clamp(200px, 60%, 400px)
   margin: 0 auto
   left: 0
   right: 0
@@ -12,10 +14,46 @@
     background: #222222cc
     margin: 0 auto
     padding: 2em 0
-    padding-bottom: 35%
+    padding-bottom: 40%
     text-align: center
+    font-size: 1.2em
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     list-style: none
-    line-height: 1.5em
+    line-height: 1.8em
     a
       color: white
       text-decoration: none
+
+.toggleNav
+  padding: 0 10px
+  position: absolute
+  width: 66px
+  bottom: $btnBottom
+  margin: 0 auto
+  left: 0
+  right: 0
+  text-align: center
+  z-index: 12
+  cursor: pointer
+  span
+    display: block
+    margin: 5px
+    height: 4px
+    background: #222
+    border-radius: 10px
+    transition: .25s ease-in-out
+
+.toggleNavCheck
+  display: none
+  &:checked
+    &~ .toggleNav
+      left: calc( 4px )
+      bottom: calc( $btnBottom + 6px )
+      span
+        background: #eee
+      span:nth-child(1)
+        transform: rotate(135deg) translate(13px,-9px)
+      span:nth-child(2)
+        opacity: 0
+      span:nth-child(3)
+        transform: rotate(-135deg) translate(4px)
