--- a/src/components/Forside.module.sass
+++ b/src/components/Forside.module.sass
@@ -4,7 +4,7 @@
   display: flex
   align-items: center
   justify-content: center
-  // height: 100%
+
   img
-    max-width: 90%
-    max-height: 90%
+    max-width: 95%
+    max-height: 95vh
